--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chinese2number",
-  "version": "1.0.0",
+  "name": "chinese2num",
+  "version": "1.0.1",
   "description": "Convert Chinese Number to Arabic Number (将中文数字转换成英文)",
   "main": "lib/index.js",
   "directories": {
